# TradeGateway

./: .gitignore  CMakeLists.txt  README.md
Public/: CMakeLists.txt  Protocol.h
Public/DataStructure/: Constexpr.h  Data.h  Enum.h
Public/IPC/: PacketHead.h  RequestData.h  RequestPacketHead.h  ResponseData.h  ResponsePacketHead.h  SocketPacketHead.h
Service/: CMakeLists.txt
Service/Acceptor/: Acceptor.cpp  Acceptor.h
Service/Packet/: RequestPacket.cpp  RequestPacket.h  SocketPacket.cpp  SocketPacket.h
Service/Reactor/: EventHandler.cpp  EventHandler.h  Reactor.cpp  Reactor.h
Service/ServiceMap/: ServiceMap.cpp  ServiceMap.h
Service/Session/: Session.cpp  Session.h  SocketSession.cpp  SocketSession.h  TradeSession.cpp  TradeSession.h
Service/TradeApi/: CMakeLists.txt  TestApi.cpp  TestApi.h  TradeApiAdapter.cpp  TradeApiAdapter.h  TradeApiHandler.cpp  TradeApiHandler.h
Service/TradeApi/CTPApi/: CMakeLists.txt  CTPApi.cpp  CTPApi.h
Service/TradeApi/TestApi/: CMakeLists.txt  TestApi.h
Test/: CMakeLists.txt  main.cpp
ToolKit/: CMakeLists.txt  DLLHelper.cpp  DLLHelper.h  Logger.cpp  Logger.h
